# modrobot

./: .gitignore  pyproject.toml
src/modrobot/: __init__.py  representation.py  rigidbodyrepresentation.py
src/modrobot/representations/: position_vector.py  position_vetor.py  rigid_body_exponential_coordinates.py  rigid_body_representation.py  rigid_body_screw.py  rigid_body_twist.py  rigid_body_wrench.py  rotation_matrix.py
src/modrobot/utilities/: skew_utils.py
