[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modrobot"
version = "0.1.0"
authors = [
  { name="Your Name", email="your@email.com" },
]
description = "The package I created while studying the book Modern Robotics."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yourusername/my_project"
Issues = "https://github.com/yourusername/my_project/issues"
